--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -18,5 +18,6 @@
   "scripts": {
     "server": "nodemon ./src/server.js --ext js --exec babel-node",
     "initdata": "node ./src/initdata.js"
-  }
+  },
+  "type": "module"
 }
